src/styles/style.css
body {
  padding: 0;
  margin: 0;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  user-select: none;
}

#logo {
  margin-bottom: 20px;
  max-width: 100%;
  text-align: center;
}

#logo img {
  width: 80%;
}

#editor-logo {
  margin-bottom: 20px;
  text-align: center;
}

#editor-logo img {
  width: 70%;
}

#container {
  display: none;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  position: relative;
}

#labeling-area {
  display: flex;
  height: calc(100vh - 80px);
}

#loading-mask {
  display: none;
  z-index: 100;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #00000099;
}

#loading-icon {
  animation: rotation 2s linear infinite;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#upload-container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #34495e;
}

#upload-container h1,
#upload-container p {
  font-size: 40px;
  color: #ecf0f1;
  margin: 0;
  margin-bottom: 20px;
  padding: 0 1rem;
}

#upload-container p {
  font-size: 22px;
  margin-bottom: 80px;
  text-align: center;
}

#video-upload {
  display: none;
}

#button-container {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

#video-upload-label,
#import-images-page {
  padding: 20px;
  border: 1px solid #bdc3c7; /*#555*/
  background-color: #e67e22;
  cursor: pointer;
  border-radius: 3px;
  transition: 0.3s ease all;
  color: #ecf0f1;
  font-size: 20px;
  font-weight: 600;
  margin: 30px;
  margin-top: 0;
  text-align: center;
}

#import-images-page {
  text-decoration: none;
  background-color: #16a085;
}

#video-upload-label:hover,
#import-images-page:hover {
  box-shadow: 2px 0px 10px 3px #bdc3c7; /*#555*/
  transform: scale(1.1);
}

#upload-message {
  margin-top: 20px;
  margin-bottom: 0 !important;
  text-align: center;
  padding: 0 1rem;
  font-size: 16px !important;
}

#tutorial-link {
  display: block;
  color: #fff;
  margin: 30px;
  text-decoration: none;
}

#tutorial-link:hover {
  text-decoration: underline;
}

#canvas {
  display: none;
}

